force-app/main/default/objects/Custom__c/Custom__c.object-meta.xml
<CustomObject>
    <label>CustomOpportunity</label>
    <nameField>
        <label>Custom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomOpportunies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>