force-app/main/default/objects/Custom__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CustomOpportunies</relationshipLabel>
    <relationshipName>CustomOpportunies</relationshipName>
    <type>Lookup</type>
</CustomField>