force-app/main/default/objects/Custom__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CustomOpportunies (Account)</relationshipLabel>
    <relationshipName>CustomOpportunies1</relationshipName>
    <type>Lookup</type>
</CustomField>